fix CI syntax i hope

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,9 @@ jobs:
       with:
         node-version: 12
     - name: Fix codestyle
-      run: npm ci
-      run: npm run lint
+      run: |
+           npm ci
+           npm run lint
     - name: Generate manifest
       run: npm run manifest
     - name: Commit changes
