--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "lint": "eslint **/*.js --fix || exit 0",
     "version": "auto-changelog --package && git add CHANGELOG.md",
-    "manifest": "node .\\.manifest.js"
+    "manifest": "node ./.manifest.js"
   },
   "author": "SaltyMonkey",
   "license": "MIT",
