idk how settings was added in CI

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,7 +1,7 @@
 {
 	"registerCommands": true,
 	"customCommandsTag": "",
-	"interactive": true,
+	"interactive": false,
 	"debugMode": false,
 	"classBasedPresets": true,
 	"enableEvents": true,
