--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,18 @@ jobs:
       with:
         node-version: 12
     - name: Lint source code
+      env:
+        CI: true
       run: |
           npm ci
           npm run lint
+          npm run lint-info
           npm ci --only=production
     - name: Generate manifest
       run: npm run manifest
     - name: Commit changes
       run: |
+          [[ `git status --porcelain` ]] || exit
           git config --global core.autocrlf false
           git config --global user.name 'SaltyMonkey'
           git config --global user.email 'SaltyMonkey@users.noreply.github.com'
