--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         CI: true
       run: |
           npm ci
-          npm run lint
+          ./node_modules/.bin/eslint **/*.js --fix
           npm ci --only=production
     - name: Generate manifest
       run: npm run manifest
