--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
-    - name: Install deps
+    - name: Install and bump deps
       run: npm install
     - name: Lint
       run: npm run lint
@@ -26,5 +26,5 @@ jobs:
           git config --global core.autocrlf false
           git config --global user.name 'SaltyMonkey'
           git config --global user.email 'SaltyMonkey@users.noreply.github.com'
-          git commit -am "[CI] Automatic commit and lint"
+          git commit -am "[CI] Automatic commit check"
           git push
