--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.1",
-    "rfdc": "^1.1.4"
+    "rfdc": "^1.1.4",
+    "string-similarity": "^4.0.1"
   }
 }
