--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,11 +1,11 @@
 {
+	"interactive": false,
 	"registerCommands": true,
 	"customCommandsTag": "",
 	"registerUI": false,
 	"registerFastAccessUI": false,
-	"interactive": false,
 	"debugMode": false,
-	"classBasedPresets": false,
+	"classBasedPresets": true,
 	"enableEvents": false,
 	"trackPresetsChanges": false
 }
