--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,11 +1,14 @@
 {
-	"interactive": false,
-	"registerCommands": true,
-	"customCommandsTag": "",
-	"registerUI": false,
-	"registerFastAccessUI": false,
-	"debugMode": false,
-	"classBasedPresets": true,
-	"enableEvents": false,
-	"trackPresetsChanges": false
+    "version": 1,
+    "data": {
+        "registerCommands": true,
+        "customCommandsTag": "",
+        "registerUI": false,
+        "registerFastAccessUI": false,
+        "interactive": false,
+        "debugMode": false,
+        "classBasedPresets": false,
+        "enableEvents": false,
+        "trackPresetsChanges": false
+    }
 }
