enable class based presets support by default

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -7,7 +7,7 @@
         "registerFastAccessUI": false,
         "interactive": false,
         "debugMode": false,
-        "classBasedPresets": false,
+        "classBasedPresets": true,
         "enableEvents": false,
         "trackPresetsChanges": false
     }
