--- a/settings/settings.json
+++ b/settings/settings.json
@@ -2,10 +2,13 @@
     "version": 1,
     "data": {
         "registerCommands": true,
-        "customCommandsTag": "",
-        "registerUI": false,
-        "registerFastAccessUI": false,
+        "fpsUtilsCommandsPrefix": false,
+        "registerUI": true,
+        "registerUIShortcut": false,
+        "UIShortcut": "",
+        "simplifiedMode": false,
         "interactive": false,
+        "cleanChat": false,
         "debugMode": false,
         "classBasedPresets": true,
         "enableEvents": false,
