--- a/settings/settings.json
+++ b/settings/settings.json
@@ -11,7 +11,6 @@
         "cleanChat": false,
         "debugMode": false,
         "classBasedPresets": true,
-        "enableEvents": false,
-        "trackPresetsChanges": false
+        "enableEvents": false
     }
 }
