update default settings

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -7,7 +7,7 @@
         "registerUIShortcut": false,
         "UIShortcut": "",
         "simplifiedMode": false,
-        "interactive": false,
+        "interactive": true,
         "cleanChat": false,
         "debugMode": false,
         "classBasedPresets": true,
